# cuckoo

./: .gitignore  README.md  slean_speed_comparison.ods
slean/: CMakeLists.txt  main.cpp  sleanTrimmer.cpp  sleanTrimmer.h
